--- a/backend/virtual-stock-trader/src/main/resources/application.properties
+++ b/backend/virtual-stock-trader/src/main/resources/application.properties
@@ -8,7 +8,8 @@ server.port=8081
 # When using Docker, 'localhost' will be replaced by the database service name (e.g., 'db').
 spring.datasource.url=jdbc:mysql://localhost:3306/virtual_stock_trader?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=csp@success
+spring.datasource.password=Eswartej2006##
+
 
 # JPA/Hibernate Configuration
 # 'update' automatically updates the schema based on your entities. Use 'validate' in production.
